IRO-1071 - margin above header

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 NFT Section
 
-- [ ] - IRO-1071 - Make the margin above the h2 200px top
+- [x] - IRO-1071 - Make the margin above the h2 200px top
 - [ ] - IRO-1072 - Make the paragraph text below the h2 the same as the paragraph's under the other h2's, mentioned in other feedback (24px font, 32px line height).
 - [ ] - IRO-1078 - Spacing within NFT card... click to read more
                    https://linear.app/ironfish/issue/IRO-1056/category-cards I mentioned the spacing requests.
