--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ NFT Section
                    https://linear.app/ironfish/issue/IRO-1056/category-cards I mentioned the spacing requests.
                    Could we apply those same styles in this card but only above the NFT card itself.
                    Photo below. Let me know if this is too vague. 
-- [ ] - IRO-1079 - Double the margin on the left and right sides of the NFT cards.
+- [x] - IRO-1079 - Double the margin on the left and right sides of the NFT cards.
 - [ ] - IRO-1081 - Community contribution NFT description - add, " to our entire community" to the end of that sentence.
                    Now each description will roughly be the same length, and the cards can now be the same height as one another.
 - [ ] - IRO-1082 - Cute little navigation arrows - make the top margin 64px.
